a lot of things

--- a/index.html
+++ b/index.html
@@ -1,28 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Dinner Shopp</title>
+    <link rel="stylesheet" href="style.css">
 
 </head>
+
 <body>
-    <section>
+    <section class="site-name">
         <ul>
-        <h1>Css Diner Shoping List</h1>
-        <p>lets go to the mail</p>
-        </ul>         
+            <h1>Css Diner Shoping List</h1>
+            <p>lets go to the mail</p>
+        </ul>
     </section>
 
-    <section>
-        <div><h2>A lot of pickles (for the next lessons about css)</h2></div>
+    <div class="container">
+        <section class="class">
+            <input type="checkbox" name="" id="">
+            <h2>A lot of pickles (for the next lessons about css)</h2>
+        </section>
+
+        <section class="class">
+            <input type="checkbox" name="" id="">
+            <h2>10 apples <s>(for more CSS manipulations</s>S</h2>
+        </section>
+        <section class="class">
+            <input type="checkbox" name="" id="">
+            <h2>20 oranges (because they are awsome)</h2>
+        </section>
+        <section class="class">
+            <h2>13 plates (hm.. they always disapear)</h2>
+        </section>
+        <section class="class">
+            <input type="checkbox" name="" id="">
+            <h2>15 bentos ^_^ (for my friends)</h2>
+        </section>
+    </div>
+    <section class="footer">
+        <h2>Bon appetit</h2>
     </section>
 
-    <section>
-        <h2>10 apples <s>(for more CSS manipulations</s>S</h2>
-    </section>
-
-
-    
 </body>
+
 </html>
