--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
 
     <div class="container">
         <section class="class">
-            <input type="checkbox" name="" id="">
-            <h2>A lot of pickles (for the next lessons about css)</h2>
+            <input type="checkbox" name="" id="" class="barre">
+            <h2 class="barre">A lot of pickles (for the next lessons about css)</h2>
         </section>
 
         <section class="class">
